Add pymupdf_layout for improved PDF layout analysis
Resolves warning message pollution in logs and test output.
The pymupdf_layout package provides better handling of complex
PDF layouts including multi-column documents and tables.

- Add pymupdf_layout==1.26.6 to requirements.txt
- Eliminates 'Consider using pymupdf_layout' warning from pymupdf4llm
- All tests passing (unit: 4/4, integration: 2/2, e2e: 7/7)

--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,4 @@ pymupdf>=1.23.0  # PDF text extraction
 # Optional: LangChain integration
 # langchain>=0.1.0
 # langchain-google-vertexai>=0.1.0
+pymupdf_layout==1.26.6
