Migrate to google-genai SDK and fix test architecture
BREAKING: Deprecated vertexai.language_models replaced with google-genai SDK

API Migration:
- Replace vertexai.language_models.TextEmbeddingModel with google-genai Client
- Update all embedding calls to use genai.Client.models.embed_content()
- Add genai_client parameter to DocumentProcessor (Dependency Injection)
- Deprecation timeline: vertexai modules deprecated June 2025, removed June 2026

Features:
- Support 15+ file formats (JSON, XML, CSV, YAML, MD, code files, logs)
- YAML conversion for structured data (JSON/XML) preserves semantic information
- Created 6 new test fixtures for comprehensive format coverage
- Eliminated pymupdf_layout warning (added to requirements)

Testing Architecture:
- 44 tests total: 30 unit (mocked), 5 integration (real Vertex AI), 9 e2e (full HTTP)
- Unit tests use Mock() for genai_client (fast, isolated logic)
- Integration tests use REAL Vertex AI via .env.local (verify cloud integration)
- E2E tests use running server with real services (full workflow)
- All tests read .env.local for credentials (consistent with main.py)
- Pytest markers for selective execution: pytest -m not integration
- 0 warnings (SWIG filtered, deprecated API eliminated)

Configuration:
- Created pyproject.toml (pythonpath, filterwarnings, pytest markers)
- Updated .gitignore with exception for copilot-instructions.md
- Added repo-specific copilot-instructions.md with google-genai SDK rules

Dependencies:
- google-genai>=0.3.0 (new - replaces deprecated vertexai modules for GenAI)
- pymupdf_layout==1.26.6 (new - eliminates warnings)
- pyyaml>=6.0 (new - YAML conversion)
- xmltodict>=0.13.0 (new - XML parsing)

Documentation:
- Comprehensive test philosophy in tests/integration/conftest.py
- tests/README.md explaining three-tier test structure
- Global copilot instructions updated with google-genai SDK rules

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,9 @@ ENV/
 *.swo
 *~
 
+# Track copilot instructions (exception to global ignore if exists)
+!.github/copilot-instructions.md
+
 # OS
 .DS_Store
 Thumbs.db
