--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 # Core dependencies
+google-genai>=0.3.0  # New Google Gen AI SDK (replaces deprecated vertexai modules)
 google-cloud-aiplatform>=1.38.0
 google-cloud-storage>=2.10.0
-vertexai>=1.0.0
+vertexai>=1.0.0  # Keep for initialization only
 
 # FastAPI and web server
 fastapi>=0.109.0
@@ -31,6 +32,10 @@ asyncpg>=0.29.0  # Async PostgreSQL driver for FastAPI
 
 # Document processing
 pymupdf>=1.23.0  # PDF text extraction
+pymupdf4llm>=0.2.7  # LLM-optimized PDF extraction
+pymupdf_layout==1.26.6  # Improved PDF layout analysis
+pyyaml>=6.0  # YAML parsing and generation (for structured data conversion)
+xmltodict>=0.13.0  # Clean XML to dict conversion
 
 # Optional: Local embeddings (for 100% portability)
 # sentence-transformers>=2.3.0  # Uncomment for local embedding models
@@ -38,4 +43,3 @@ pymupdf>=1.23.0  # PDF text extraction
 # Optional: LangChain integration
 # langchain>=0.1.0
 # langchain-google-vertexai>=0.1.0
-pymupdf_layout==1.26.6
