Implement production-grade file validation with magic bytes detection
BREAKING: File uploads now strictly validated using 3-tier strategy

Features:
- Magic bytes detection with python-magic + libmagic
- 3-tier validation: strict (PDF), structured (JSON/XML/YAML), lenient (text)
- Comprehensive error messages with actionable solutions
- Quality-first philosophy: fail fast on bad input

Validation Strategy:
- STRICT (PDF): Magic bytes + parse validation (prevent spoofing/corruption)
- STRUCTURED (JSON/XML/YAML): Parse validation (preserve semantics)
- LENIENT (Text/Code): UTF-8 validation only (tolerate formatting issues)

Testing:
- 17 new unit tests (all passing)
- Full suite: 61/61 tests passing
- Covers valid files, corrupted files, syntax errors, spoofing attempts

Dependencies:
- python-magic>=0.4.27 (Python binding)
- libmagic (system library: brew install libmagic or apt-get install libmagic1)

Documentation:
- File Validation section in README with philosophy explanation
- Troubleshooting section with validation error examples
- System Dependencies section for libmagic installation

Philosophy:
Better to reject bad input once than get bad search results forever.
Uploads are one-time, queries are hundreds of times.
Bad embeddings are permanent and expensive to fix.

--- a/requirements.txt
+++ b/requirements.txt
@@ -43,3 +43,4 @@ xmltodict>=0.13.0  # Clean XML to dict conversion
 # Optional: LangChain integration
 # langchain>=0.1.0
 # langchain-google-vertexai>=0.1.0
+python-magic>=0.4.27  # Content-based file type detection (magic bytes)
