Add professional HTML to Markdown conversion with html2text
Features:
- HTML → Markdown conversion preserving document structure
- Structure preservation: headings, tables, lists, links, formatting
- Consistent with PDF processing (both → Markdown for RAG quality)
- Professional html2text library (active maintenance, robust)

Implementation:
- extract_text_from_html() method in DocumentProcessor
- Configurable html2text converter (no line wrapping, keep links/images)
- Routes .html/.htm files to dedicated HTML extraction
- Removes HTML tags while preserving semantic structure

Testing:
- 2 new tests: test_html_extraction, test_html_fixture_extraction
- sample.html fixture: realistic HTML with tables, lists, code blocks
- Full suite: 63/63 tests passing (was 61/61)

Documentation:
- README updated: HTML → MD conversion documented
- Key Dependencies: html2text>=2024.2.26 added
- Project structure: 15 test fixtures (was 14)
- Upload examples: HTML file conversion shown

Dependencies:
- html2text>=2024.2.26 (HTML to Markdown conversion)

Philosophy:
HTML pages have complex formatting (tables, blocks, structure).
Professional export to Markdown better preserves structuring than plain text extraction.
Consistent representation: PDF → MD, HTML → MD for uniform RAG quality.

--- a/requirements.txt
+++ b/requirements.txt
@@ -44,3 +44,4 @@ xmltodict>=0.13.0  # Clean XML to dict conversion
 # langchain>=0.1.0
 # langchain-google-vertexai>=0.1.0
 python-magic>=0.4.27  # Content-based file type detection (magic bytes)
+html2text>=2024.2.26  # HTML to Markdown conversion (preserves structure like PDF)
