feat: implement JWT authentication with Google Identity Platform
Phase 1: Authentication (AuthNZ Task 1/2)

BREAKING CHANGE: All API endpoints now require JWT authentication

Core Implementation:
- Added JWT token verification using Google OAuth2 ID tokens
- Whitelist-based authorization (ALLOWED_USERS env var)
- Dev mode support (works without GOOGLE_CLIENT_ID for testing)
- Store user_id + timestamp in document metadata during upload
- Protected endpoints: /v1/documents/upload, /v1/query

New Dependencies:
- PyJWT>=2.8.0 (JWT encoding/decoding)
- cryptography>=41.0.0 (RS256 algorithm support)
- google-auth>=2.23.0 (Google token verification)

New Files:
- src/auth.py: Authentication module with token verification
- tests/unit/test_auth.py: 11 unit tests for auth logic

Configuration (.env.local):
- ALLOWED_USERS: Comma-separated whitelist (javaisforever@gmail.com)
- GOOGLE_CLIENT_ID: OAuth2 client ID (optional in dev mode)

Test Infrastructure:
- conftest.py: auth_headers fixture for testing
- Updated all E2E tests (20 tests) to use authentication
- Updated integration tests (2 tests) to use authentication
- All 85 tests passing (60 unit, 20 e2e, 5 integration)

API Changes:
- POST /v1/documents/upload: Requires Authorization: Bearer <token>
- POST /v1/query: Requires Authorization: Bearer <token>
- Document metadata now includes: uploaded_by, uploaded_at, uploaded_via
- Swagger UI updated with security scheme

Security Features:
- Token expiration validation
- Issuer validation (accounts.google.com only)
- Whitelist-based access control
- 401 Unauthorized for invalid/missing tokens
- 403 Forbidden for non-whitelisted users

Next Phase: Metadata Filtering (AuthNZ Task 2/2)

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,11 @@ psycopg2-binary>=2.9.9
 pgvector>=0.2.3
 asyncpg>=0.29.0  # Async PostgreSQL driver for FastAPI
 
+# Authentication (JWT tokens, Google Identity Platform)
+PyJWT>=2.8.0
+cryptography>=41.0.0  # Required for JWT RS256 algorithm
+google-auth>=2.23.0  # Google token verification
+
 # Document processing
 pymupdf>=1.23.0  # PDF text extraction
 pymupdf4llm>=0.2.7  # LLM-optimized PDF extraction
