refactor: migrate to vendor-independent JWT authentication using JWKS
Replace Google-specific google-auth library with vendor-independent PyJWT + JWKS.

WHY: Previous implementation locked us into Google Identity Platform only.
NOW: Support any OIDC-compliant provider (Google, Azure AD, Auth0, Okta, etc.)

Core Changes:
- src/auth.py: Replace google.oauth2.id_token with PyJWT + PyJWKClient
- Function renamed: verify_google_token() → verify_jwt_token()
- Use JWKS (JSON Web Key Set) for token signature verification
- Token verification now provider-agnostic - only URL changes

Configuration (.env.local):
- JWKS_URL: Provider's public key endpoint (default: Google)
- ISSUER: Expected token issuer (default: https://accounts.google.com)
- AUDIENCE: OAuth2 client ID (replaces GOOGLE_CLIENT_ID)
- Dev mode: Works when AUDIENCE is empty (was GOOGLE_CLIENT_ID)

Examples for different providers:
- Google: JWKS_URL=https://www.googleapis.com/oauth2/v3/certs
- Azure AD: JWKS_URL=https://login.microsoftonline.com/{tenant}/discovery/v2.0/keys
- Auth0: JWKS_URL=https://{domain}/.well-known/jwks.json
- Okta: JWKS_URL=https://{domain}/oauth2/default/v1/keys

Dependencies:
- Removed: google-auth>=2.23.0 (vendor lock-in)
- Updated: PyJWT[crypto]>=2.8.0 (includes PyJWKClient for JWKS support)
- Kept: cryptography>=41.0.0 (RS256 algorithm)

Test Updates:
- tests/unit/test_auth.py: Updated all 11 tests to use PyJWKClient mocks
- Replaced @patch("src.auth.id_token.verify_oauth2_token")
- Added @patch("src.auth.PyJWKClient") and @patch("src.auth.jwt.decode")
- All tests use context managers (with patch()) for proper cleanup
- Tests now verify JWKS workflow instead of Google-specific flow

Results:
- All 85 tests passing (60 unit, 20 e2e, 5 integration)
- Zero breaking changes to API surface
- Same security guarantees (RS256, token expiration, issuer validation)
- Added flexibility to switch OIDC providers by changing config only

Migration Path:
To use a different provider, update .env.loca

--- a/requirements.txt
+++ b/requirements.txt
@@ -30,10 +30,10 @@ psycopg2-binary>=2.9.9
 pgvector>=0.2.3
 asyncpg>=0.29.0  # Async PostgreSQL driver for FastAPI
 
-# Authentication (JWT tokens, Google Identity Platform)
-PyJWT>=2.8.0
+# Authentication (vendor-independent JWT tokens with JWKS support)
+PyJWT[crypto]>=2.8.0  # JWT encoding/decoding + JWKS client (PyJWKClient)
 cryptography>=41.0.0  # Required for JWT RS256 algorithm
-google-auth>=2.23.0  # Google token verification
+# Removed google-auth>=2.23.0 - now using PyJWT's PyJWKClient for vendor independence
 
 # Document processing
 pymupdf>=1.23.0  # PDF text extraction
