feat: Add Gemini async batch reranking with reasoning + deterministic tests
- Implemented GeminiReranker with async batching (2 docs/batch, 10 parallel)
- Performance: 20 docs in 7-8s (2x faster than sequential)
- Added rerank_reasoning field to API response (LLM explanation)
- Created deterministic keyword trap test (technical doc vs fairy tale)
- Optimized parallel chunk fetching with asyncio.gather
- Added rotating log files with timestamp-based sessions (10MB x 10 files)
- Updated all documentation (README, reranking.md, e2e/README)
- All 162 tests passing (37 e2e, 13 integration, 112 unit)

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -35,6 +35,11 @@ services:
       # Database connection
       DATABASE_URL: postgresql://raglab:raglab_dev_password@postgres:5432/raglab
       
+      # Reranking configuration (optional - improves search quality)
+      RERANKER_ENABLED: ${RERANKER_ENABLED:-false}
+      RERANKER_TYPE: ${RERANKER_TYPE:-gemini}
+      RERANKER_MODEL: ${RERANKER_MODEL:-gemini-2.0-flash-exp}
+      
       # For development only - mount credentials
       GOOGLE_APPLICATION_CREDENTIALS: /app/service-account-key.json
     ports:
