--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,6 +50,7 @@ filterwarnings = [
 ]
 # Test markers for selective test execution
 markers = [
+    "unit: Unit tests with all external dependencies mocked",
     "integration: Integration tests requiring real cloud services (GCP credentials, Vertex AI)",
     "e2e: End-to-end tests requiring running server and full infrastructure",
 ]
