feat: Phase 2 - Hybrid Search Upload Integration with BM25 + LLM Extraction
Database Schema:
- Add summary TEXT, keywords TEXT[], token_count INTEGER to original_documents
- Add GIN index on keywords array for fast filtering
- Migration: ALTER TABLE IF NOT EXISTS for backward compatibility

BM25 Implementation:
- Tokenizer: Snowball stemmer (nltk) + stopwords (34 words) + number filtering
- Index builder: Document-level term frequency aggregation
- Result: 51% index size reduction (235 → 116 terms)

LLM Integration:
- Gemini 2.0 Flash Lite for summary + keywords extraction
- Cost: ~$0.0004 per document
- Latency: ~2 seconds per upload

Storage:
- PostgreSQL: summary, keywords, token_count fields
- GCS: bm25_doc_index.json (1-5KB per document)

API:
- Upload endpoint: Full pipeline (extract → chunk → embed → BM25 → LLM → save)
- GET /v1/documents: Returns summary/keywords/token_count
- All 3 document endpoints updated

Infrastructure:
- Log retention: Keep last 5 files (was accumulating 50+)
- Dependencies: Added nltk>=3.8.0 for Snowball stemmer

Testing:
- 194 tests passing (134 unit, 23 integration, 37 e2e)
- Integration tests: Snowball stemming expectations
- Async fixtures: Fixed pytest-asyncio warnings
- Datetime: Fixed deprecation warnings (datetime.utcnow → datetime.now(timezone.utc))

Documentation:
- ROADMAP.md: Phase 2 status updated to COMPLETE
- README.md: Hybrid search Phase 2 features, schema updated, test count updated

Files Changed:
- src/database.py: Schema migration + hybrid fields
- src/main.py: Upload integration + API endpoints
- src/storage.py: BM25 index upload to GCS
- src/logging_config.py: Log retention fix
- src/bm25/: tokenizer, stemmer, index_builder, llm_extraction (new)
- tests/: All tests updated for Snowball stemming
- requirements.txt: nltk>=3.8.0

Next: Phase 3 - Query endpoint integration (BM25 scoring + RRF fusion)

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ python-multipart>=0.0.6
 # Data processing
 pandas>=2.0.0
 numpy>=1.24.0
+nltk>=3.8.0  # Natural Language Toolkit for stemming/tokenization
 
 # Vector operations
 faiss-cpu>=1.7.4
