Phase 2 complete: Switch to gemini-2.5-flash-lite with retry logic
- LLM extraction: gemini-2.5-flash-lite (4.2x cheaper, 100% reliable vs flash 90%)
- Retry logic: 5 attempts with exponential backoff (1s, 2s, 4s, 8s, 16s)
- JSON errors now retriable (flash unstable on long docs)
- Separate env vars: EMBEDDING_MODEL, RERANKER_MODEL, LLM_EXTRACTION_MODEL
- Updated docs: README (concise), hybrid-search.md (detailed), ROADMAP (Phase 2 status)
- Removed duplicate roadmap from README (link to ROADMAP.md)
- All 194 tests passing (37 e2e, 23 integration, 134 unit)

Cost: $2.25 per 10K docs (vs $9.35 with flash)
Success rate: 100% (tested with 10 iterations)

--- a/.env.example
+++ b/.env.example
@@ -29,9 +29,9 @@ RERANKER_TYPE=gemini
 
 # Reranker model (type-specific):
 # Gemini models (RERANKER_TYPE=gemini, default):
-#   - gemini-2.0-flash-exp (fast, recommended)
-#   - gemini-1.5-flash (stable)
-#   - gemini-1.5-pro (highest quality, slower)
+#   - gemini-2.5-flash (RECOMMENDED: stable, production-ready, Dec 2025)
+#   - gemini-2.0-flash-exp (experimental, may change)
+#   - gemini-1.5-flash (deprecated, use 2.5)
 # Local models (RERANKER_TYPE=local):
 #   - cross-encoder/ms-marco-MiniLM-L-12-v2 (120MB, fast, good)
 #   - BAAI/bge-reranker-base (1.1GB, better quality)
@@ -39,7 +39,14 @@ RERANKER_TYPE=gemini
 # Cohere models (RERANKER_TYPE=cohere):
 #   - rerank-english-v3.0 (best for English)
 #   - rerank-multilingual-v3.0 (100+ languages)
-RERANKER_MODEL=gemini-2.0-flash-exp
+RERANKER_MODEL=gemini-2.5-flash
+
+# LLM Extraction (for summary + keywords generation during upload)
+# Used for BM25 hybrid search metadata extraction
+# Recommended: gemini-2.5-flash-lite (cheapest, $0.10/1M input + $0.40/1M output)
+# Cost: ~$0.000225 per document (~$2.25 per 10K docs, 4.2x cheaper than flash)
+# Alternative: gemini-2.5-flash ($9.35 per 10K docs, better quality for complex docs)
+LLM_EXTRACTION_MODEL=gemini-2.5-flash-lite
 
 # Google Cloud configuration (required for RERANKER_TYPE=gemini)
 # Uses GCP_PROJECT_ID and GCP_REGION from above
