refactor: enforce explicit env vars, update to gemini-2.5-flash-lite
- Remove all default values from code (RERANKER_*, LLM_EXTRACTION_MODEL now required)
- Unify models: gemini-2.5-flash-lite for both extraction and reranking
- Update all documentation (README, hybrid-search, development, reranking)
- Fix .env.example: EMBEDDING_DIMENSION=768, add PORT/LOG_LEVEL/GCS_CONNECTION_POOL_SIZE
- Add BigQuery billing analytics: query_billing.py script, OAuth scopes
- Mark slow test with @pytest.mark.slow decorator
- Test results: 23 integration + 37 E2E tests PASS, gemini-2.5-flash-lite 30x faster

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,25 @@ SERVICE_ACCOUNT_EMAIL=rag-service@your-project-id.iam.gserviceaccount.com
 # Vertex AI
 VERTEX_AI_LOCATION=us-central1
 EMBEDDING_MODEL=text-embedding-005
-EMBEDDING_DIMENSION=1408
+EMBEDDING_DIMENSION=768  # text-embedding-005 max dimension
+
+# FastAPI
+PORT=8080
+
+# Logging (set to DEBUG for detailed logs during development)
+LOG_LEVEL=INFO
+
+# GCS Connection Pool (controls concurrent upload/download operations)
+# Must match urllib3 connection pool size (default: 10)
+GCS_CONNECTION_POOL_SIZE=10
+
+# Authentication & Authorization (Production: use workload identity, no user lists)
+# For local dev: populate ALLOWED_USERS, JWKS_URL, ISSUER, AUDIENCE in .env.local
+# ALLOWED_USERS=user1@example.com,user2@example.com
+# TRUSTED_SERVICE_ACCOUNTS=backend-sa@project.iam.gserviceaccount.com
+# JWKS_URL=https://www.googleapis.com/oauth2/v3/certs
+# ISSUER=https://accounts.google.com
+# AUDIENCE=your-oauth-client-id
 
 # Reranking (optional - improves search relevance at cost of latency)
 # Enable reranking for better search quality (multi-stage retrieval)
@@ -28,18 +46,17 @@ RERANKER_ENABLED=false
 RERANKER_TYPE=gemini
 
 # Reranker model (type-specific):
-# Gemini models (RERANKER_TYPE=gemini, default):
-#   - gemini-2.5-flash (RECOMMENDED: stable, production-ready, Dec 2025)
+# Gemini models (RERANKER_TYPE=gemini):
+#   - gemini-2.5-flash-lite (RECOMMENDED: cheap, reliable, tested)
+#   - gemini-2.5-flash (more expensive, 10% JSON failures in extraction)
 #   - gemini-2.0-flash-exp (experimental, may change)
-#   - gemini-1.5-flash (deprecated, use 2.5)
 # Local models (RERANKER_TYPE=local):
 #   - cross-encoder/ms-marco-MiniLM-L-12-v2 (120MB, fast, good)
 #   - BAAI/bge-reranker-base (1.1GB, better quality)
-#   - BAAI/bge-reranker-large (1.4GB, best quality)
 # Cohere models (RERANKER_TYPE=cohere):
 #   - rerank-english-v3.0 (best for English)
 #   - rerank-multilingual-v3.0 (100+ languages)
-RERANKER_MODEL=gemini-2.5-flash
+RERANKER_MODEL=gemini-2.5-flash-lite
 
 # LLM Extraction (for summary + keywords generation during upload)
 # Used for BM25 hybrid search metadata extraction
