--- a/pytest.ini
+++ b/pytest.ini
@@ -3,6 +3,7 @@ markers =
     e2e: End-to-end tests (full workflow)
     unit: Unit tests
     integration: Integration tests
+    slow: Slow tests (60+ seconds, expensive API calls)
     cleanup: Cleanup operations (setup/teardown)
     upload: Document upload tests
     list: Document listing tests
