test: fix hybrid search tests and warnings
- Fix metadata_filter → filters in test_05h and test_05i
- Rename test_hybrid_search_integration.py → test_hybrid_search_logic.py
- Simplify test_05k - verify hybrid search works (not prove improvement)
- Remove specialized test documents (hybrid_test_*.txt)
- Fix datetime.utcnow() → datetime.now(timezone.utc)
- Fix Pydantic class Config → model_config = ConfigDict
- Update test count in README (69 tests: 38 e2e, 23 integration, 8 unit)

--- a/pytest.ini
+++ b/pytest.ini
@@ -11,6 +11,7 @@ markers =
     metadata_filter: Metadata filtering tests
     semantic_search: Semantic search tests
     reranking: Reranking tests
+    hybrid_search: Hybrid search tests (vector + BM25 + RRF)
     download: Document download tests
     storage: Storage verification tests
 
@@ -20,6 +21,7 @@ markers =
 # pytest -m "upload or list"  # Run upload + list
 # pytest -m semantic_search   # Run semantic search tests
 # pytest -m reranking         # Run reranking tests only
+# pytest -m hybrid_search     # Run hybrid search tests only
 # pytest -m "not cleanup"     # Skip cleanup tests
 
 # Suppress PyMuPDF SWIG deprecation warnings
