docs: restructure .env files and README
- Clarify .env.local vs .env vs .env.deploy purposes
- .env.local: local dev config (localhost DB)
- .env: production runtime config (Cloud Run)
- .env.deploy: infrastructure setup only (no app config)

- Remove app config from .env.deploy (embedding models, reranking, auth)
- Add all app config to .env (was incomplete - only 14 lines)
- Update .env.example and .env.deploy.example templates

- Add 'How to Use This Documentation' section to README
- Instructions for humans and AI assistants
- Restructure README: 349 lines → 219 lines (-37%)
- README is now a navigation hub, not comprehensive guide

- Update docs/development.md with detailed .env explanation
- Add link from docs/deployment.md to development.md
- Clarify Key Difference: .env.local/.env = app config, .env.deploy = infra config

--- a/deployment/.env.deploy.example
+++ b/deployment/.env.deploy.example
@@ -1,4 +1,8 @@
 # Deployment Configuration for RAG-as-a-Service
+# Used by deployment scripts (setup-infrastructure.sh, deploy-cloudrun.sh)
+# Copy this file to .env.deploy and fill in your actual values
+
+# ===== GCP Infrastructure Settings =====
 
 # GCP_PROJECT_ID - Your GCP project ID
 GCP_PROJECT_ID="your-gcp-project-id"
@@ -7,26 +11,35 @@ GCP_PROJECT_ID="your-gcp-project-id"
 # Recommended: us-central1 (cheapest, 0$ egress within region)
 GCP_REGION="us-central1"
 
-# DEPLOYMENT_AUTH_MODE - Authentication method
+# DEPLOYMENT_AUTH_MODE - Authentication method for deployment scripts
 # - 'service_account': Uses service-account-key.json (must exist in deployment/)
 # - 'gcloud': Uses gcloud CLI (run: gcloud auth application-default login)
 DEPLOYMENT_AUTH_MODE="gcloud"
 
-# Infrastructure names (generated automatically if not specified)
-# GCS_BUCKET="${GCP_PROJECT_ID}-rag-documents"
-# CLOUD_SQL_INSTANCE="rag-postgres"
-# SERVICE_ACCOUNT_NAME="rag-service"
-# CLOUD_RUN_SERVICE="rag-api"
+# ===== Infrastructure Resource Names =====
+# These will be created by setup-infrastructure.sh or you can specify existing ones
 
-# Database configuration
+GCS_BUCKET="your-project-id-rag-documents"
+CLOUD_SQL_INSTANCE="rag-postgres"
+SERVICE_ACCOUNT_NAME="rag-service"
+SERVICE_ACCOUNT_EMAIL="rag-service@your-project-id.iam.gserviceaccount.com"
+CLOUD_RUN_SERVICE="raglab"
+
+# ===== Database Configuration =====
 DB_NAME="rag_db"
 DB_USER="rag_user"
-# DB_PASSWORD - generated automatically if not specified
+# DB_PASSWORD - generated automatically by setup script and stored in deployment/credentials.txt
 
-# Cloud Run configuration
+# ===== Cloud Run Configuration =====
+# Resource limits and scaling settings for Cloud Run deployment
 CLOUD_RUN_MEMORY="1Gi"
 CLOUD_RUN_CPU="1"
 CLOUD_RUN_MIN_INSTANCES="0"
 CLOUD_RUN_MAX_INSTANCES="10"
 CLOUD_RUN_TIMEOUT="300"
 CLOUD_RUN_CONCURRENCY="80"
+
+# ===== Note =====
+# Application runtime configuration (embedding models, reranking, auth, etc.)
+# is defined in the root .env file, which is used by the deployed service.
+# This file (.env.deploy) only contains deployment and infrastructure settings.
