feat: Add GitHub CI/CD deployment pipeline with modular dependencies
Architecture improvements:
- Split requirements into base/optional for provider flexibility
- requirements-base.txt: Core dependencies (Vertex AI, FastAPI, PostgreSQL)
- requirements-optional.txt: sentence-transformers + torch (on-premise providers)
- Dockerfile: Use only base deps, saves 150MB and 5 minutes build time

CI/CD automation:
- cloudbuild.yaml: Automated build/deploy pipeline (latest tag only)
- deployment/setup-cloudbuild-trigger.sh: One-command setup script
- GitHub webhook integration via Cloud Build GitHub App
- Automated IAM permissions for Cloud Build Service Account

Configuration management:
- deployment/upload-secrets.sh: Upload .env to Secret Manager
- deployment/.env.deploy: Added GitHub repo configuration
- Secret mounted as volume at /app/.env (not in Docker image)

Documentation:
- DEPLOYMENT_CHECKLIST.md: Quick reference for deployment workflow
- deployment/CLOUDBUILD_SETUP.md: Complete CI/CD setup guide
- docs/dependencies.md: Dependencies architecture and rationale
- docs/cloudbuild-setup.md: Manual setup reference (legacy)
- Updated README.md and docs/deployment.md for new workflow

Benefits:
- Build time: 20min → 5min (first build), 30sec (cached)
- Image size: ~550MB → ~400MB
- Deploy: git push deploy/production (fully automated)
- Cost: ~$0.02-0.04 per deploy (within free tier)
- Security: Secrets in Secret Manager, minimal IAM permissions

--- a/deployment/.env.deploy.example
+++ b/deployment/.env.deploy.example
@@ -39,7 +39,24 @@ CLOUD_RUN_MAX_INSTANCES="10"
 CLOUD_RUN_TIMEOUT="300"
 CLOUD_RUN_CONCURRENCY="80"
 
+# ===== Secret Manager Configuration =====
+# Name of the secret in Secret Manager that will store the .env file
+# The .env file will be mounted as a volume at /app/.env in Cloud Run
+SECRET_NAME="raglab-config"
+
+# ===== Cloud Build & GitHub Configuration =====
+# GitHub repository information for Cloud Build trigger
+GITHUB_REPO_OWNER="your-github-username"
+GITHUB_REPO_NAME="rag-lab"
+
+# Cloud Build trigger settings
+TRIGGER_NAME="deploy-production"
+DEPLOY_BRANCH="deploy/production"
+
 # ===== Note =====
 # Application runtime configuration (embedding models, reranking, auth, etc.)
-# is defined in the root .env file, which is used by the deployed service.
-# This file (.env.deploy) only contains deployment and infrastructure settings.
+# is defined in the root .env file, which is uploaded to Secret Manager
+# and mounted as a volume in Cloud Run at runtime. This approach ensures:
+# - Secrets are not included in the Docker image
+# - Configuration can be updated without rebuilding the container
+# - The app reads from .env the same way locally and in production
