--- a/deployment/.env.deploy.example
+++ b/deployment/.env.deploy.example
@@ -26,9 +26,11 @@ SERVICE_ACCOUNT_EMAIL="rag-service@your-project-id.iam.gserviceaccount.com"
 CLOUD_RUN_SERVICE="raglab"
 
 # ===== Database Configuration =====
+DB_INSTANCE_NAME="rag-postgres"
 DB_NAME="rag_db"
 DB_USER="rag_user"
-# DB_PASSWORD - generated automatically by setup script and stored in deployment/credentials.txt
+# DB_PASSWORD - REQUIRED! Set your actual database password here
+# DB_PASSWORD="your-database-password-here"
 
 # ===== Cloud Run Configuration =====
 # Resource limits and scaling settings for Cloud Run deployment
