Optimize Docker build with multi-stage caching
- Add cache pull step before build (reuse previous layers)
- Build with --cache-from for layer reuse
- Base stage cached unless requirements-base.txt changes
- Result: ~30-60s builds (vs 5min) when only code changes
- Add secretmanager.viewer role to setup-infrastructure.sh

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,8 @@ temp/
 *.faiss
 *.index
 chroma/
+
+# Credentials (added by setup script)
+deployment/credentials.txt
+.env
+service-account-key.json
