Add missing dependencies and fix module imports
- Add html2text>=2020.1.16 to requirements-base.txt
- Add libmagic1 to Dockerfile production stage
- Create src/__init__.py to make src a Python package
- Set PYTHONPATH=/app for correct module imports
- Fix Cloud Run secret mount syntax (--update-secrets)

--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -41,3 +41,4 @@ pymupdf_layout==1.26.6  # Improved PDF layout analysis
 pyyaml>=6.0  # YAML parsing and generation (for structured data conversion)
 xmltodict>=0.13.0  # Clean XML to dict conversion
 python-magic>=0.4.27  # Content-based file type detection (magic bytes)
+html2text>=2020.1.16  # HTML to Markdown conversion
